--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,80 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  line-height: 1.2;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 body {
   background-color: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
+}
+
+.content {
+  margin: 30px auto;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.close {
+  background: var(--tg-theme-button-color);
+  color: var(--tg-theme-button-text-color);
+  border: none;
+  padding: 20px 20px;
+  text-align: center;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 600;
+
+}
+
+.top__button {
+  background-color: var(--tg-theme-secondary-bg-color);
+  color: var(--tg-theme-button-text-color);
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 6px;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.display {
+  border-radius: 12px;
+  background-color: var(--tg-theme-secondary-bg-color);
+
+}
+
+.display__block {
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+}
+
+.display__title {
+  color: var(--tg-theme-hint-color);
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.display__text {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.display__currency {
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.display__block:not(:last-child) {
+  border-bottom: 1px solid var(--tg-theme-bg-color);
 }
