--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: var(--tg-theme-bg-color);
+  background-color: var(--tg-theme-secondary-bg-color);
   color: var(--tg-theme-text-color);
 }
 
@@ -18,6 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 
 .close {
@@ -33,8 +34,7 @@ body {
 }
 
 .top__button {
-  background-color: var(--tg-theme-secondary-bg-color);
-  color: var(--tg-theme-button-text-color);
+  background-color: var(--tg-theme-bg-color);
   padding: 10px 20px;
   font-size: 16px;
   font-weight: 600;
@@ -43,12 +43,13 @@ body {
 
 .top {
   display: flex;
-  justify-content: space-between;
+  gap: 30px;
+  margin-bottom: 20px;
 }
 
 .display {
   border-radius: 12px;
-  background-color: var(--tg-theme-secondary-bg-color);
+  background-color: var(--tg-theme-bg-color);
 
 }
 
@@ -57,6 +58,7 @@ body {
   padding: 10px 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .display__title {
@@ -77,5 +79,5 @@ body {
 }
 
 .display__block:not(:last-child) {
-  border-bottom: 1px solid var(--tg-theme-bg-color);
+  border-bottom: 1px solid var(--tg-theme-secondary-bg-color);
 }
