--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,12 @@ body {
 
 .content {
   margin: 30px auto;
+  padding: 20px 15px;
   max-width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 100vh;
 }
 
 .close {
